EXTRA_DIST = \
	feedlist.opml \
	feedlist_bg.opml \
	feedlist_ca.opml \
	feedlist_de.opml \
	feedlist_es.opml \
	feedlist_eu.opml \
	feedlist_fr.opml \
	feedlist_pl.opml \
	feedlist_pt.opml \
	feedlist_pt_BR.opml \
	feedlist_ru.opml \
	feedlist_sk.opml \
	feedlist_sv.opml \
	feedlist_tr.opml \
	feedlist_nl.opml

lifereadistopmldir = $(datadir)/liferea/opml
lifereadistopml_DATA = $(EXTRA_DIST)
