EXTRA_DIST = \
	feedlist_en.opml \
	feedlist_bg.opml \
	feedlist_ca.opml \
	feedlist_de.opml \
	feedlist_es.opml \
	feedlist_eu.opml \
	feedlist_fr.opml \
	feedlist_he.opml \
	feedlist_hu.opml \
	feedlist_gl.opml \
	feedlist_id.opml \
	feedlist_it.opml \
	feedlist_pl.opml \
	feedlist_pt.opml \
	feedlist_pt_BR.opml \
	feedlist_sk.opml \
	feedlist_sv.opml \
	feedlist_nl.opml \
	feedlist_no.opml \
	feedlist_fa.opml

lifereadistopmldir = $(datadir)/liferea/opml
lifereadistopml_DATA = $(EXTRA_DIST)
