install_subdir ('hicolor',
  install_dir: join_paths (datadir, 'icons')
)

pixmaps = [
  'mail-attachment.png',
  'available.png',
  'available_offline.png',
  'default.png',
  'folder.png',
  'empty.png',
  'empty_offline.png',
  'emblem-important.png',
  'unread.png',
  'folder-saved-search.png',
  'fl_opml.png',
  'newsbin.png'
]

install_data (pixmaps,
  install_dir: join_paths (pkgdatadir, 'pixmaps')
)
