
liferea_sources = files(
  'auth.c',
  'browser.c',
  'browser_history.c',
  'comments.c',
  'common.c',
  'conf.c',
  'date.c',
  'db.c',
  'dbus.c',
  'debug.c',
  'download.c',
  'enclosure.c',
  'export.c',
  'favicon.c',
  'feed_parser.c',
  'feedlist.c',
  'html.c',
  'item.c',
  'item_history.c',
  'item_loader.c',
  'item_state.c',
  'itemset.c',
  'itemlist.c',
  'json.c',
  'liferea_application.c',
  'metadata.c',
  'migrate.c',
  'net.c',
  'net_monitor.c',
  'node.c',
  'node_source.c',
  'node_provider.c',
  'rule.c',
  'social.c',
  'subscription.c',
  'subscription_icon.c',
  'update.c',
  'update_job.c',
  'update_job_queue.c',
  'main.c',
  'vfolder_loader.c',
  'xml.c',
  'actions/item_actions.c',
  'actions/link_actions.c',
  'actions/node_actions.c',
  'actions/shell_actions.c',
  'node_providers/feed.c',
  'node_providers/folder.c',
  'node_providers/newsbin.c',
  'node_providers/vfolder.c',
  'node_sources/default_source.c',
  'node_sources/dummy_source.c',
  'node_sources/google_source.c',
  'node_sources/google_source_feed.c',
  'node_sources/google_source_feed_list.c',
  'node_sources/google_reader_api.c',
  'node_sources/google_reader_api_edit.c',
  'node_sources/json_api_mapper.c',
  'node_sources/ttrss_source.c',
  'node_sources/ttrss_source_feed.c',
  'node_sources/ttrss_source_feed_list.c',
  'node_sources/theoldreader_source.c',
  'node_sources/theoldreader_source_feed.c',
  'node_sources/theoldreader_source_feed_list.c',
  'node_sources/reedah_source.c',
  'node_sources/reedah_source_feed.c',
  'node_sources/reedah_source_feed_list.c',
  'node_sources/opml_source.c',
  'parsers/atom10.c',
  'parsers/html5_feed.c',
  'parsers/ldjson_feed.c',
  'parsers/ns_admin.c',
  'parsers/ns_ag.c',
  'parsers/ns_cC.c',
  'parsers/ns_content.c',
  'parsers/ns_dc.c',
  'parsers/ns_georss.c',
  'parsers/ns_itunes.c',
  'parsers/ns_media.c',
  'parsers/ns_slash.c',
  'parsers/ns_syn.c',
  'parsers/ns_trackback.c',
  'parsers/ns_wfw.c',
  'parsers/rss_channel.c',
  'parsers/rss_item.c',
  'plugins/auth_activatable.c',
  'plugins/download_activatable.c',
  'plugins/liferea_activatable.c',
  'plugins/liferea_shell_activatable.c',
  'plugins/node_source_activatable.c',
  'plugins/plugins_engine.c',
  'ui/auth_dialog.c',
  'ui/browser_tabs.c',
  'ui/content_view.c',
  'ui/feed_list_view.c',
  'ui/gedit-close-button.c',
  'ui/icons.c',
  'ui/item_list_view.c',
  'ui/liferea_browser.c',
  'ui/liferea_dialog.c',
  'ui/liferea_shell.c',
  'ui/preferences_dialog.c',
  'ui/rule_editor.c',
  'ui/search_dialog.c',
  'ui/search_folder_dialog.c',
  'ui/subscription_dialog.c',
  'ui/ui_common.c',
  'ui/ui_dnd.c',
  'ui/ui_update.c',
  'webkit/liferea_webkit.c',
  'webkit/liferea_web_view.c'
)