html_doc_en =	about_en.html \
		concepts_en.html \
		folders_en.html \
		headlines_en.html \
		preferences_en.html \
		reference_en.html \
		searching_en.html \
		subscriptions_en.html \
		topics_en.html \
		updating_en.html \
		enclosures_en.html \
		newsbin_en.html \
		faq_en.html

html_doc_ja =	reference_ja.html \
		topics_ja.html \
		faq_ja.html

html_doc_nl =	reference_nl.html

html_doc_de =	about_de.html \
		concepts_de.html \
		folders_de.html \
		headlines_de.html \
		preferences_de.html \
		reference_de.html \
		searching_de.html \
		subscriptions_de.html \
		topics_de.html \
		updating_de.html \
		enclosures_de.html \
		newsbin_de.html \
		faq_de.html

html_doc_pictures_en =	help_feed_default.png \
			help_feed_error.png \
			help_folder.png \
			help_opml.png \
			help_feed_prop_downl_1.4.0.png \
			help_feed_prop_cache_1.4.0.png \
			help_feed_prop_adv_1.4.0.png \
			help_feed_prop_general_1.4.0.png \
			help_feed_prop_source_1.4.0.png \
			help_item_flag.png \
			help_item_unread.png \
			help_prefs_browser_1.4.0.png \
			help_prefs_enclosures_1.4.0.png \
			help_prefs_feeds_1.4.0.png \
			help_prefs_folders_1.4.0.png \
			help_prefs_gui_1.4.0.png \
			help_prefs_headlines_1.4.0.png \
			help_prefs_proxy_1.4.0.png \
			help_search_1.4.0.png \
			help_subscribe_1.4.0.png \
			help_source_add_1.4.0.png \
			help_vfolder_1.4.0.png

EXTRA_DIST =	$(html_doc_en) \
		$(html_doc_ja) \
		$(html_doc_nl) \
		$(html_doc_de) \
		$(html_doc_pictures_en) \
		reference.css


htmldoc_DATA =	$(html_doc_en) \
		$(html_doc_ja) \
		$(html_doc_nl) \
		$(html_doc_de) \
		$(html_doc_pictures_en) \
		reference.css

htmldocdir = $(datadir)/liferea/doc/html

