html_doc_en =	about_en.html \
		concepts_en.html \
		folders_en.html \
		headlines_en.html \
		preferences_en.html \
		searching_en.html \
		subscriptions_en.html \
		topics_en.html \
		updating_en.html \
		newsbin_en.html \
		onlineservices_en.html

html_doc_de =	about_de.html \
		concepts_de.html \
		folders_de.html \
		headlines_de.html \
		preferences_de.html \
		searching_de.html \
		subscriptions_de.html \
		topics_de.html \
		updating_de.html \
		newsbin_de.html \
		onlineservices_de.html

html_doc_it =	about_it.html \
		concepts_it.html \
		folders_it.html \
		headlines_it.html \
		preferences_it.html \
		searching_it.html \
		subscriptions_it.html \
		topics_it.html \
		updating_it.html \
		newsbin_it.html \
		onlineservices_it.html

html_doc_ru =	about_ru.html \
		concepts_ru.html \
		folders_ru.html \
		headlines_ru.html \
		preferences_ru.html \
		searching_ru.html \
		subscriptions_ru.html \
		topics_ru.html \
		updating_ru.html \
		newsbin_ru.html \
		onlineservices_ru.html


html_doc_pictures_en =	help_feed_default.png \
			help_feed_error.png \
			help_folder.png \
			help_opml.png \
			help_feed_prop_downl_1.6.0.png \
			help_feed_prop_cache_1.6.0.png \
			help_feed_prop_adv_1.6.0.png \
			help_feed_prop_general_1.6.0.png \
			help_feed_prop_source_1.6.0.png \
			help_item_flag.png \
			help_item_unread.png \
			help_prefs_browser_1.14.0.png \
			help_prefs_feeds_1.14.0.png \
			help_prefs_folders_1.14.0.png \
			help_prefs_desktop_1.14.0.png \
			help_prefs_headlines_1.14.0.png \
			help_prefs_proxy_1.14.0.png \
			help_search_1.6.0.png \
			help_subscribe_1.6.0.png \
			help_subscribe_adv_1.6.0.png \
			help_vfolder_1.6.0.png

EXTRA_DIST =	$(html_doc_en) \
		$(html_doc_de) \
		$(html_doc_it) \
		$(html_doc_ru) \
		$(html_doc_pictures_en)


htmldoc_DATA =	$(html_doc_en) \
		$(html_doc_de) \
		$(html_doc_it) \
		$(html_doc_ru) \
		$(html_doc_pictures_en)

htmldocdir = $(datadir)/liferea/doc/html
